# judgementchain

./: .gitignore  AGENTS.md  README.md  bun.lockb  bundledFileStatus.html  mise.toml  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
.cargo/: config.toml
.docs/: DesignDoc.md  PRD.md  TASKS.md  claude_think.md  task.md
.issues/: 001-graph-file-limit.md  002-graph-hidden-dir-leak.md  003-graph-grouping-file-drop.md  004-graph-no-cache.md  005-graph-no-local-algorithm.md  006-graph-hierarchy-incomplete.md  007-embedding-graph-not-integrated.md
.kiro/specs/graph-panel/: design.md
.kiro/specs/nomos-editor/: .config.kiro  design.md  requirements.md
.kiro/specs/plugin-system/: requirements.md
.nomos/plugins/clock/: main.js  manifest.json
.nomos/plugins/word-counter/: main.js  manifest.json
.tasks/: 001-fix-file-limit.md  002-exclude-hidden-dirs.md  003-add-grouping-fallback.md  004-cache-graph-results.md  005-local-clustering.md  006-tree-diagram-export.md  007-integrate-embedding-graph.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/models/: .gitattributes  README.md
src-tauri/src/: ai.rs  bibtex.rs  clustering.rs  commands.rs  config.rs  database.rs  git.rs  graph_backend.rs  lib.rs  main.rs  memory_budget.rs  terminal.rs  vault.rs  vertex_ai.rs  watcher.rs
src/assets/: gemma-terms.md
src/components/: ActivityBar.tsx  AiChatPanel.tsx  CommandPalette.tsx  Editor.tsx  EditorPane.tsx  FileTree.tsx  FileViewer.tsx  GemmaTermsModal.css  GemmaTermsModal.tsx  GitDiff.tsx  GitPanel.tsx  GraphPanel.tsx  MarginPanel.tsx  MarkdownCodeEditor.tsx  MarkdownPreview.tsx  NotificationContainer.tsx  PluginPanelHost.tsx  PluginSettings.tsx  SettingsPanel.tsx  StatusBar.tsx  TabBar.tsx  TerminalPanel.tsx
src/extensions/: wikilinks.ts  wordCompletion.ts
src/hooks/: useAI.ts  useAppMenu.ts  useGit.ts  useGraphAnalysis.ts  useNotifications.ts  useSettings.ts  useVault.ts
src/lib/: editorThemes.ts  notifications.ts
src/plugins/: PluginUI.css  api.ts  loader.ts  registry.ts  types.ts
src/types/: index.ts
