[package]
name = "judgement-brain"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "judgement_brain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
notify = "6"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
regex = "1"
encoding_rs = "0.8"
candle-core = { git = "https://github.com/liverHawk/candle.git", branch = "main" }
candle-nn = { git = "https://github.com/liverHawk/candle.git", branch = "main" }
candle-transformers = { git = "https://github.com/liverHawk/candle.git", branch = "main" }
tokenizers = "0.21"
hf-hub = "0.4"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { git = "https://github.com/liverHawk/candle.git", branch = "main", features = ["metal"] }
candle-nn = { git = "https://github.com/liverHawk/candle.git", branch = "main", features = ["metal"] }
candle-transformers = { git = "https://github.com/liverHawk/candle.git", branch = "main", features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { git = "https://github.com/liverHawk/candle.git", branch = "main", features = ["cuda"] }
candle-nn = { git = "https://github.com/liverHawk/candle.git", branch = "main", features = ["cuda"] }
candle-transformers = { git = "https://github.com/liverHawk/candle.git", branch = "main", features = ["cuda"] }

